--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bootstrap-vue": "^2.4.2",
         "laravel-echo": "^1.6.1",
+        "moment": "^2.24.0",
         "pusher-js": "^5.1.1"
     }
 }
