--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-vue": "^2.4.2",
         "laravel-echo": "^1.6.1",
         "moment": "^2.24.0",
-        "pusher-js": "^5.1.1"
+        "pusher-js": "^5.1.1",
+        "vuex": "^3.1.3"
     }
 }
